cmake_minimum_required(VERSION 3.20)
project(DicomReader)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE main.cpp)
add_executable(dicom_reader ${SOURCE})
find_package(DCMTK)
if(DCMTK_FOUND)
	include_directories(${DCMTK_INCLUDE_DIRS})
	foreach(LIB ${DCMTK_LIBRARIES})
		FIND_LIBRARY(FOUND_LIB_${LIB} ${LIB})
        target_link_libraries(dicom_reader ${FOUND_LIB_${LIB}})
	endforeach(LIB)
else()
	message(WARNING "DCMTK not found. DICOM support is not available.")
endif()

find_package(ZLIB REQUIRED)
target_link_libraries(dicom_reader ${ZLIB_LIBRARIES} )
target_link_libraries(dicom_reader "-Wl,--disable-new-dtags")